--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "ava"
+  },
   "devDependencies": {
     "ava": "^0.25.0",
     "eslint": "^5.5.0",
-    "eslint-config-byungi": "^0.0.18"
+    "eslint-config-byungi": "^0.0.18",
+    "esm": "^3.0.82"
   },
   "eslintConfig": {
     "extends": "byungi"
   },
   "dependencies": {
     "puppeteer": "^1.7.0"
+  },
+  "ava": {
+    "require": ["esm"]
   }
 }
