--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ava": "^0.25.0",
     "eslint": "^5.5.0",
     "eslint-config-byungi": "^0.0.18",
-    "esm": "^3.0.82"
+    "esm": "^3.0.82",
+    "fs-extra": "^7.0.0"
   },
   "eslintConfig": {
     "extends": "byungi",
@@ -19,6 +20,7 @@
     }
   },
   "dependencies": {
+    "download": "^7.1.0",
     "puppeteer": "^1.7.0"
   },
   "ava": {
