--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "eslint-config-byungi": "^0.0.18",
     "esm": "^3.0.82"
   },
-  "eslintConfig": {
-    "extends": "byungi",
-    "env": {
-      "browser": true
-    }
-  },
   "dependencies": {
+    "archiver": "^3.0.0",
     "download": "^7.1.0",
-    "puppeteer": "^1.7.0"
+    "form-data": "^2.3.2",
+    "got": "^9.2.1",
+    "puppeteer": "^1.7.0",
+    "temp-write": "^3.4.0"
+  },  
+  "eslintConfig": {
+    "extends": "byungi"
   },
   "ava": {
     "require": [
