--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "ava": "^0.25.0",
     "del": "^3.0.0",
     "eslint": "^5.5.0",
-    "eslint-config-byungi": "^0.0.18",
-    "esm": "^3.0.82"
+    "eslint-config-byungi": "^0.0.18"
   },
   "dependencies": {
     "archiver": "^3.0.0",
@@ -23,10 +22,5 @@
   },
   "eslintConfig": {
     "extends": "byungi"
-  },
-  "ava": {
-    "require": [
-      "esm"
-    ]
   }
 }
