--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "download": "^7.1.0",
     "form-data": "^2.3.2",
     "got": "^9.2.1",
+    "load-json-file": "^5.0.0",
     "normalize-url": "^3.3.0",
-    "ora-p": "^0.1.2",
+    "ora": "^3.0.0",
     "prompts": "^1.0.0",
     "puppeteer": "^1.7.0",
     "sade": "^1.4.1",
