--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "bin": {
-    "zenth": "./lib/cli.js"
+    "themer": "./lib/cli.js"
   },
   "scripts": {
     "test": "ava"
