--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "zendesk-themer",
+  "description": "CLI for zendesk hc theme deploy",
   "version": "0.0.0",
-  "main": "dist/index.js",
+  "main": "./lib/cli.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skt-t1-byungi/zendesk-themer.git"
+  },
+  "author": "skt-t1-byungi <tiniwz@gmail.com>",
+  "keywords": [
+    "zendesk",
+    "theme",
+    "cli",
+    "deploy",
+    "helpcenter",
+    "hc"
+  ],
+  "files": [
+    "lib"
+  ],
   "license": "MIT",
   "bin": {
     "themer": "./lib/cli.js"
