--- a/package.json
+++ b/package.json
@@ -28,27 +28,28 @@
     },
     "devDependencies": {
         "ava": "^1.4.1",
-        "del": "^4.1.0",
-        "eslint": "^5.16.0",
-        "eslint-config-byungi": "^0.2.9"
+        "del": "^5.1.0",
+        "eslint": "^6.8.0",
+        "eslint-config-byungi": "^0.7.7"
     },
     "dependencies": {
         "archiver": "^3.0.0",
         "chrome-finder": "^1.0.5",
         "download": "^7.1.0",
-        "form-data": "^2.3.3",
-        "fs-extra": "^7.0.1",
-        "globby": "^9.2.0",
-        "got": "^9.5.0",
-        "load-json-file": "^5.2.0",
-        "mergeri": "^0.0.3",
-        "normalize-url": "^4.3.0",
-        "ora": "^3.4.0",
+        "form-data": "^3.0.0",
+        "fs-extra": "^8.1.0",
+        "globby": "^11.0.0",
+        "got": "^10.5.5",
+        "load-json-file": "^6.2.0",
+        "mergeri": "^0.1.3",
+        "normalize-path": "^3.0.0",
+        "normalize-url": "^5.0.0",
+        "ora": "^4.0.3",
         "prompts": "^2.0.3",
-        "puppeteer-core": "^1.14.0",
+        "puppeteer-core": "^2.1.1",
         "sade": "^1.4.2",
         "unique-filename": "^1.1.1",
-        "write-json-file": "^3.1.0"
+        "write-json-file": "^4.3.0"
     },
     "eslintConfig": {
         "extends": "byungi"
