--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "fs-extra": "^8.1.0",
         "globby": "^11.0.0",
         "got": "^10.5.5",
+        "is-file-equal": "^1.3.0",
         "load-json-file": "^6.2.0",
         "mergeri": "^0.1.3",
         "normalize-path": "^3.0.0",
