--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "archiver": "^3.0.0",
         "chrome-finder": "^1.0.5",
+        "cross-path-sort": "^1.0.0",
         "download": "^7.1.0",
         "form-data": "^3.0.0",
         "fs-extra": "^8.1.0",
